# proxcli

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  PLAN.md  PROJECT.md  PROMPT.md  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml
docs/: DESIGN.md  api-coverage.md  api-permissions.md  cloud-init.md  coding-agents.md  index.html  production-automation.md  quickstart.md
docs/assets/: index--UfqIAAZ.js  index-BCo7MVr9.css  index-BSuvkUXY.css  index-BXYTt1tS.js  index-BwJQE1iX.js  index-ByNjGdaz.css  index-Bzx5-fXr.css  index-C065Mx3s.css  index-C6qORSyt.js  index-C6rir4NR.css  index-CN_l140M.js  index-CQGRsLq0.js  index-CXj2Y5B-.js  index-CXpOjuxt.css  index-CcFNOdKz.js  index-Cecmq22G.css  index-CqtOPraD.js  index-CzBORAU3.js  index-CzlZ89lg.js  index-D7TxcBjX.js  index-DCgE359N.js  index-DGsK8n2U.js  index-DHZbdYf3.css  index-DK_IbObz.js  index-DLDs0H6j.js  index-DN3xpZcr.js  index-DNUNOtQ1.css  index-DPyaTXDJ.js  index-DVZ0PCPa.css  index-DYQPMK8x.js  index-DZHCWuMT.css  index-DuA-LMH9.js  index-DvvC4-JR.css  index-DwlXfn8E.js  index-DzVGynjI.js  index-RCXqfI4k.js  index-TyGnhMcv.js  index-X1PtE1nX.js  index-dvhNNche.css  index-yWCA-XEO.css  (+1 more)
docs/website/: build-all.sh  index.html  package-lock.json  package.json  vite.config.js
proxmox/cli/: acl.py  api.py  auth.py  backup.py  ceph.py  cluster.py  completion.py  container.py  firewall_helpers.py  main.py  network.py  node.py  pool.py  role.py  storage.py  tasks.py  update.py  user.py  vm.py  vm_spec.py
tests/: conftest.py  test_auth.py  test_client.py  test_config.py
(+51 files in other folders)
